syntax = "proto3";

package chat.v1;

option go_package = "github.com/matorix/chat.fdbm.dev/gen/chat/v1;chatv1";

message SendChatRequest {
    DiscussionInfo discussion_info = 1;
    string name = 2;
    string body = 3;
}

message SendChatResponse {
}

message PageInfo {
    string cursor=1;
    int32 limit=2;
    int32 earlier_at=3;
}

message DiscussionInfo {
    string id = 1;
    string low_password = 2;
}

message GetChatsRequest {
    DiscussionInfo discussion_info = 1;
    PageInfo pageing_info = 2;
}

message Chat {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string body = 4;
    int32 created_at = 5;
}

message GetChatsResponse {
    repeated Chat chats = 1;
}

message GetChatsStreamRequest {
    DiscussionInfo discussion_info = 1;
}

message GetChatsStreamResponse {
    repeated Chat chats = 1;
}

message UserInfo {
    string name = 1;
    string unsafe_id = 2;
}

message BytesData {
    bytes data = 1;
    string id = 2;
    string type = 3;
    string filename = 4;
    int32 created_at = 5;
    bool finished = 6;
}

message SendBytesStreamRequest {
    DiscussionInfo discussion_info = 1;
    BytesData data = 2;
    UserInfo user = 3;
}

message SendBytesStreamResponse {
}

message ListenBytesStreamRequest {
    DiscussionInfo discussion_info = 1;
    UserInfo user = 2;
}

message ListenBytesStreamResponse {
    BytesData data = 1;
}

service ChatService {
    rpc SendChat(SendChatRequest) returns (SendChatResponse) {};
    rpc GetChats(GetChatsRequest) returns (GetChatsResponse) {};
    rpc GetChatsStream(GetChatsStreamRequest) returns (stream GetChatsStreamResponse) {};
    rpc SendBytesStream(stream SendBytesStreamRequest) returns (SendBytesStreamResponse) {};
    rpc ListenBytesStream(ListenBytesStreamRequest) returns (stream ListenBytesStreamResponse) {};
}
